# achdome

./: .gitignore  .gitmodules  CMakeLists.txt
configs/: single_fisheye.xml
configs/dome/: dome_node_sim.xml  dome_node_sim_run.sh
configs/gameConfigs/: gameTest.json
src/: main.cpp
src/includes/: FBO.h  TextTexture2D.h  Webserver.h  actionResolver.h  adminGameController.h  bitmap.h  clientStates.h  clusterRenderSpace.h  clusterState.h  collisionSpace.h  colorTheme.h  dataSerializationBuilder.h  domeSurface.h  dumbAIController.h  fisheyeCollisionSpace.h  game.h  gameClusterState.h  gameConfig.h  gameController.h  gameEngine.h  gamePlayer.h  gameRenderState.h  gameState.h  jsonActionResolver.h  jsonBuilder.h  keyboardGameController.h  lobbyClusterState.h  lobbyRenderState.h  pixelValue.h  player.h  playerEventListener.h  playerGameController.h  playerLobbyTile.h  playerManager.h  rainbowColorTheme.h  renderConfig.h  renderSpace.h  renderState.h  renderable.h  renderableDome.h  (+29 more)
src/libs/: Webserver.cpp  adminGameController.cpp  bitmap.cpp  clusterRenderSpace.cpp  dataSerializationBuilder.cpp  domeSurface.cpp  dumbAIController.cpp  fishEyeCollisionSpace.cpp  game.cpp  gameClusterState.cpp  gameConfig.cpp  gameEngine.cpp  gamePlayer.cpp  gameRenderState.cpp  jsonActionResolver.cpp  jsonBuilder.cpp  keyboardGameController.cpp  lobbyClusterState.cpp  lobbyRenderState.cpp  pixelValue.cpp  player.cpp  playerGameController.cpp  playerLobbyTile.cpp  playerManager.cpp  rainbowColorTheme.cpp  renderable.cpp  renderableDome.cpp  renderablePanel.cpp  renderableWormArcs.cpp  renderableWormGroup.cpp  renderableWormHeads.cpp  renderer.cpp  socketGameController.cpp  syncMaster.cpp  test.cpp  tween.cpp  tweener.cpp  uniformDistributor.cpp  webServer.cpp  websocketBufferQueue.cpp  (+8 more)
src/shaders/: collisionShader.frag  domeGridShader.frag  domeLogoShader.frag  domeShader.frag  domeShader.vert  domeWormsShader.frag  gameOverShader.frag  gameOverShader.vert  pyramidShader.frag  pyramidShader.vert  textShader.frag  uiPanelShader.frag  uiPanelShader.vert  wormHeadShader.frag  wormHeadShader.vert  wormShader.frag  wormShader.vert
src/webResources/: Gruntfile.js  admin.html  index.html  package.json  socket.html
src/webResources/assets/css/: reset.css
src/webResources/assets/js/: achdome.js
src/webResources/assets/js/modules/: admin.js  adminServer.js  logotypeAnimator.js  main.js  mockServer.js  oldServer.js  player.js  playerServer.js  server.js
src/webResources/assets/less/: admin.less  common.less  globals.less  index.less  landscape.less  portrait.less
src/webResources/assets/templates/: adminPanel.hbs  authenticateAdmin.hbs  died.hbs  disconnected.hbs  gameOver.hbs  lobby.hbs  moving.hbs  notMoving.hbs  register.hbs  registered.hbs  started.hbs  tournamentOver.hbs  welcome.hbs
src/webResources/assets/templates/partials/: color.hbs  identifier.hbs  logotype.hbs  player.hbs  score.hbs  topList.hbs
